--- a/DS_Capstone_IBM.ipynb
+++ b/DS_Capstone_IBM.ipynb
@@ -4,28 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### IBM Data Science Capstone\n",
+    "#### <font color=red>IBM Data Science Capstone</font>\n",
     "This notebook will be used to develop the project for the final course in the IBM Data Science Certification."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "#### <font color=blue>Introduction/Business Problem</font>\n",
     "\n",
-    "print('Hello Capstone Project Course!')"
+    "Identify businesses with most footfall in the city of London and cluster the neighbourhoods accordingly to identify where the contractors could open certain businesses accordingly. Businesses wanting to open up in areas where demand is high could make use of the conclusions from the report. On the other hand, if the business had an approach to avoid areas where there are already serving large number of customers and instead focus on areas outside the high footall areas may instead avoid these areas when considering to open a new business. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=blue>Data Section</font>\n",
+    "The data to identify the neighborhoods in London can be scrapped from wikipedia \"https://en.wikipedia.org/wiki/List_of_London_boroughs\" to retrieve the respective boroughs and their Coordinates. Those coordinates will be later used to build a list of business within a certain radius from it and fed into the Foursquare API to get the details of number so customers to visit them. The frequency of visits will be calculated and the boroughs will be clustered according to algorithms to identify the boroughs with high demand for certain businesses. "
    ]
   },
   {
