Adding Business Problem and Data Source2

--- a/DS_Capstone_IBM.ipynb
+++ b/DS_Capstone_IBM.ipynb
@@ -14,7 +14,11 @@
    "source": [
     "#### <font color=blue>Introduction/Business Problem</font>\n",
     "\n",
-    "Identify businesses with most footfall in the city of London and cluster the neighbourhoods accordingly to identify where the contractors could open certain businesses accordingly. Businesses wanting to open up in areas where demand is high could make use of the conclusions from the report. On the other hand, if the business had an approach to avoid areas where there are already serving large number of customers and instead focus on areas outside the high footall areas may instead avoid these areas when considering to open a new business. "
+    "**Background:**  \n",
+    "An important step in opening an business is zeroing on its location; the revenue of a business is highly correlated to how good its location is - businesses located highly close to each other have to split potential revenue while businesses located very remotely suffer in the other direction. So it would be essential to identify potential areas that would be promising in terms of revenue it could generate from customers. \n",
+    "\n",
+    "**Problem:**  \n",
+    "Identify businesses with most footfall in the city of ``London`` and cluster the neighbourhoods accordingly to identify where the contractors could open certain businesses accordingly. Businesses wanting to open up in areas where demand is high could make use of the conclusions from the report. On the other hand, if the business had an approach to avoid areas where there are already serving large number of customers and instead focus on areas outside the high footall areas may instead avoid these areas when considering to open a new business. "
    ]
   },
   {
