Final Report and Notebook

--- a/Data Section.ipynb
+++ b/Data Section.ipynb
@@ -92,7 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Customer Type \n",
+    "\u001bm### Customer Type \n",
+    "Land Prices for the city of London can be obtained from the HM Land Registry website [Land value estimates for policy appraisal 2017.](https://www.gov.uk/government/publications/land-value-estimates-for-policy-appraisal-2017) The downloaded Excel File can be uploaded into a panda Data Frame. The average land prices per hactare mapped by borough can be extracted from this data as shown below:\n",
+    "**Note**- The sheet one containing the residential land prices has been considered.m### Customer Type \n",
     "Land Prices for the city of London can be obtained from the HM Land Registry website [Land value estimates for policy appraisal 2017.](https://www.gov.uk/government/publications/land-value-estimates-for-policy-appraisal-2017) The downloaded Excel File can be uploaded into a panda Data Frame. The average land prices per hactare mapped by borough can be extracted from this data as shown below:\n",
     "**Note**- The sheet one containing the residential land prices has been considered."
    ]
